legacy/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cuma
  namespace: cuma
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - cuma.example.com
      secretName: cuma-tls
  rules:
    - host: cuma.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cuma
                port:
                  number: 8080
